# stratakv

./: .gitignore  Dockerfile  MultGPUPlan.md  Plan.md  README.md  Tier2Plan.md  Tier3Plan.md  main.py  pyproject.toml
outputs/: llama_sonic_healed.pt  llama_transmla_healed.pt  smoke_test_healed.pt  smoke_test_t2_healed.pt  smoke_test_t3_sonic_healed.pt
scratch/: check_patch.py
scripts/: run_base_glm.py  run_experiment.py  run_tier2_extraction.py  run_tier2_healing.py  run_tier2_llama.py  run_tier2_pipeline.py
scripts/tier1/: base_llama.py  base_qwen.py
scripts/tier2/: tier2_extraction.py  tier2_healing.py  tier2_llama.py  tier2_pipeline.py
scripts/tier3/: tier3_healing.py  tier3_llama.py  tier3_pipeline.py
src/: cache_manager.py
src/clustering/: abit.py  buffer.py
src/compression/: sonic.py  transmla.py
src/core/: config.py  types.py
src/models/llama/: __init__.py  modeling_llama.py  tier2_phase1_extraction.py  tier2_phase5_healing.py  tier3_phase5_healing.py
src/tiers/: base_tier.py  tier0_sink.py  tier1_recent.py  tier2_latent.py  tier3_sonic.py
tests/: accelerate_default_config.yaml  test_tier2_phase4.py  test_tier2_phase5.py
tests/clustering/: test_abit.py  test_buffer.py
tests/integration/: test_distributed.py
tests/performance/: test_multitenancy.py
tests/tier2/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
tests/tier3/: test_batch_packing.py  test_phase2_medoid.py  test_sonic_cruncher.py  test_tier3_healing.py  test_tripath_attention.py
