[project]
name = "stratakv-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "huggingface-hub>=1.8.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "rich>=14.3.3",
    "safetensors>=0.7.0",
    "torch>=2.5.0",
    "transformers>=5.4.0",
    "typer>=0.24.1",
    "wandb>=0.25.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
